be able to fetch data
update service class
be able to fetch data and bind to html element

--- a/CSPA/Views/Activity/Index.cshtml
+++ b/CSPA/Views/Activity/Index.cshtml
@@ -1,2 +1,14 @@
-﻿
-I am a activity partial view
+﻿<table class="table table-responsive">
+    <thead>
+        <tr>
+            <th>Id</th>
+            <th>Name</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr data-ng-repeat="Activity in Activities">
+            <td>{{Activity.id}}</td>
+            <td>{{Activity.name}}</td>            
+        </tr>
+    </tbody> 
+</table>
