update rider service

--- a/CSPA/Views/Rider/Index.cshtml
+++ b/CSPA/Views/Rider/Index.cshtml
@@ -1,1 +1,10 @@
-﻿I am a partial rider view
+﻿<table>
+    <tr>
+        <td>User name:</td>
+        <td>{{Profile.userName}}</td>
+    </tr>
+    <tr>
+        <td>Full name:</td>
+        <td>{{Profile.fullName}}</td>
+    </tr>
+</table>
