be able to pass data between controllers
user $routeparam to pass data

--- a/CSPA/Views/Activity/Index.cshtml
+++ b/CSPA/Views/Activity/Index.cshtml
@@ -3,12 +3,14 @@
         <tr>
             <th>Id</th>
             <th>Name</th>
+            <th>Action(s)</th>
         </tr>
     </thead>
     <tbody>
         <tr data-ng-repeat="Activity in Activities">
             <td>{{Activity.id}}</td>
             <td>{{Activity.name}}</td>            
+            <td><a ng-href="/App#/activityDetail/{{Activity.id}}">Detail</a></td>
         </tr>
     </tbody> 
 </table>
