--- a/CSPA/Views/Shared/_Layout.cshtml
+++ b/CSPA/Views/Shared/_Layout.cshtml
@@ -39,7 +39,8 @@
     </div>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js" type="text/javascript"></script>
-       
+    <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/angular-moment/0.9.0/angular-moment.min.js"></script>
     @Scripts.Render("~/bundles/bootstrap")
   
     @RenderSection("Scripts", required: false)
