--- a/CSPA/Views/App/Index.cshtml
+++ b/CSPA/Views/App/Index.cshtml
@@ -1,6 +1,10 @@
 ﻿<div id="appDiv" data-ng-app="ApplicationModule" data-ng-view>
     
 </div>
+
 <script src="https://code.angularjs.org/1.5.0/angular.min.js"></script>
 <script src="https://code.angularjs.org/1.5.0/angular-route.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/angular-moment/0.9.0/angular-moment.min.js"></script>
+
 @Scripts.Render("~/bundles/app")
