--- a/CSPA/Views/App/Index.cshtml
+++ b/CSPA/Views/App/Index.cshtml
@@ -2,9 +2,19 @@
     
 </div>
 
+
+
+@section Scripts
+{
 <script src="https://code.angularjs.org/1.5.0/angular.min.js"></script>
 <script src="https://code.angularjs.org/1.5.0/angular-route.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/angular-moment/0.9.0/angular-moment.min.js"></script>
-
-@Scripts.Render("~/bundles/app")
+<script src="/Scripts/app/common.js"></script>
+<script src="/Scripts/app/Module.js"></script>
+<script src="/Scripts/app/RiderController.js"></script>
+<script src="/Scripts/app/ActivityController.js"></script>
+<script src="/Scripts/app/ActivityDetailController.js"></script>
+<script src="/Scripts/app/Service.js"></script>
+@*@Scripts.Render("~/bundles/app")*@    
+}
