--- a/CSPA/Content/Site.css
+++ b/CSPA/Content/Site.css
@@ -34,3 +34,15 @@ textarea {
         padding: 10px 15px;
     }
 }
+
+.div-border {
+    margin-right: 0;
+    margin-left: 0;
+    background-color: #fff;
+    border-color: #ddd;
+    border-width: 1px;
+    border-radius: 4px 4px 0 0;
+    border-style: solid;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}
