--- a/CSPA/Views/Activity/Detail.cshtml
+++ b/CSPA/Views/Activity/Detail.cshtml
@@ -1,2 +1,19 @@
 ﻿
-Activity detail Id: {{activityId}}
+<div class="container">
+    <div class="row  div-border">
+        <div class="col-lg-6">
+            Activity name: {{ActivityDetail.name}}
+            <time am-time-ago="ActivityDetail.dateTime" title="{{ ActivityDetail.dateTime | amDateFormat: 'dddd, MMMM Do YYYY, h:mm a' }}"></time>
+        </div>
+        <div id="activityDetailContent" class="col-lg-6">
+            Distance: {{ActivityDetail.distance}} KM
+            Average Speed: {{ActivityDetail.averageSpeed}} KM/H
+        </div>
+    </div>
+    <br />
+    <div id="activityDetailMap" class="row div-border">
+        <ng-map default-style="false" zoom="12" center="[49.309029, -123.08892]">
+        </ng-map>
+    </div>
+    
+</div>
