--- a/CSPA/Views/App/Index.cshtml
+++ b/CSPA/Views/App/Index.cshtml
@@ -6,10 +6,15 @@
 
 @section Scripts
 {
+
 <script src="https://code.angularjs.org/1.5.0/angular.min.js"></script>
 <script src="https://code.angularjs.org/1.5.0/angular-route.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment.min.js"></script>
+<script src="http://maps.google.com/maps/api/js"></script>
+
 <script src="//cdnjs.cloudflare.com/ajax/libs/angular-moment/0.9.0/angular-moment.min.js"></script>
+<script src="~/Scripts/ng-map.min.js"></script>
+
 <script src="/Scripts/app/common.js"></script>
 <script src="/Scripts/app/Module.js"></script>
 <script src="/Scripts/app/RiderController.js"></script>
