be able to expand map div
study angular directive

--- a/CSPA/Views/Activity/Detail.cshtml
+++ b/CSPA/Views/Activity/Detail.cshtml
@@ -1,4 +1,8 @@
 ﻿
+<style>
+    
+</style>
+
 <div class="container">
     <div class="row  div-border">
         <div class="col-lg-6">
@@ -11,9 +15,10 @@
         </div>
     </div>
     <br />
-    <div id="activityDetailMap" class="row div-border">
+    <div id="map-container" class="row div-border" style="max-height: 800px; max-width: 80%">
         <ng-map default-style="false" zoom="12" center="[49.309029, -123.08892]">
         </ng-map>
+        <div full-screen-toggle class="custom-control">Full Screen</div>
     </div>
     
 </div>
