--- a/CSPA/Views/Shared/_Layout.cshtml
+++ b/CSPA/Views/Shared/_Layout.cshtml
@@ -30,14 +30,14 @@
             </div>
         </div>
     </div>
-    <div class="container body-content">
+    <div class="body-content">
         @RenderBody()        
         <hr />
-        <footer>
+        <footer class="container">
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
         </footer>
     </div>
-
+    
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js" type="text/javascript"></script>
     
     
