--- a/CSPA/Views/App/Index.cshtml
+++ b/CSPA/Views/App/Index.cshtml
@@ -20,6 +20,7 @@
 <script src="/Scripts/app/RiderController.js"></script>
 <script src="/Scripts/app/ActivityController.js"></script>
 <script src="/Scripts/app/ActivityDetailController.js"></script>
+<script src="~/Scripts/app/EarnDateController.js"></script>
 <script src="/Scripts/app/Service.js"></script>
 @*@Scripts.Render("~/bundles/app")*@    
 }
