--- a/CSPA/Views/Shared/_Layout.cshtml
+++ b/CSPA/Views/Shared/_Layout.cshtml
@@ -34,11 +34,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="@Url.Action("Index", "Home")">Angular Demo System</a>
+                <a class="navbar-brand" href="/App">Angular Demo System</a>
             </div>
             <div class="navbar-collapse collapse navbar-material-light-blue-collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="/Home">Home<div class="ripple-container"></div></a></li>
+                    <li><a href="/App">Home<div class="ripple-container"></div></a></li>
                     <li>@Html.ActionLink("API", "Index", "Help", new { area = "HelpPage" }, null)</li>
                     <li><a href="/App#/listActivity"> Activities </a></li>
                     <li><a href="/App#/rider"> Rider </a></li>
