be able to generate multiple time series data chart

--- a/CSPA/Views/App/Index.cshtml
+++ b/CSPA/Views/App/Index.cshtml
@@ -21,6 +21,7 @@
 <script src="/Scripts/app/ActivityController.js"></script>
 <script src="/Scripts/app/ActivityDetailController.js"></script>
 <script src="~/Scripts/app/EarnDateController.js"></script>
+<script src="~/Scripts/app/ChartController.js"></script>
 <script src="/Scripts/app/Service.js"></script>
 @*@Scripts.Render("~/bundles/app")*@    
 }
