--- a/CSPA/Views/Shared/_Layout.cshtml
+++ b/CSPA/Views/Shared/_Layout.cshtml
@@ -42,6 +42,7 @@
                     <li>@Html.ActionLink("API", "Index", "Help", new { area = "HelpPage" }, null)</li>
                     <li><a href="/App#/listActivity"> Activities </a></li>
                     <li><a href="/App#/rider"> Rider </a></li>
+                    <li><a href="/App#/chart"> Chart </a></li>
                 </ul>
             </div>
         </div>
