be able to move bar

--- a/CSPA/Views/Chart/Index.cshtml
+++ b/CSPA/Views/Chart/Index.cshtml
@@ -71,8 +71,10 @@
         </div>
     </div>
     <br />
+    <button id="button" class="autocompare">Next</button>
     <div id="graphContainer" class="row div-border" style="height: 800px">
         
     </div>
+    
 
 </div>
