remove earn date page, chart page

--- a/CSPA/Views/Shared/_Layout.cshtml
+++ b/CSPA/Views/Shared/_Layout.cshtml
@@ -39,10 +39,9 @@
             <div class="navbar-collapse collapse navbar-material-light-blue-collapse">
                 <ul class="nav navbar-nav">
                     <li><a href="/App">Home<div class="ripple-container"></div></a></li>
-                    <li>@Html.ActionLink("API", "Index", "Help", new { area = "HelpPage" }, null)</li>
+                    @*<li>@Html.ActionLink("API", "Index", "Help", new { area = "HelpPage" }, null)</li>*@
                     <li><a href="/App#/listActivity"> Activities </a></li>
-                    <li><a href="/App#/rider"> Rider </a></li>
-                    <li><a href="/App#/chart"> Chart </a></li>
+                    <li><a href="/App#/rider"> Rider </a></li>                    
                 </ul>
             </div>
         </div>
