--- a/CSPA/Views/App/Index.cshtml
+++ b/CSPA/Views/App/Index.cshtml
@@ -17,18 +17,18 @@
 
 <script src="//cdnjs.cloudflare.com/ajax/libs/angular-moment/0.9.0/angular-moment.min.js"></script>
 <script src="~/Scripts/ng-map.min.js"></script>
+<link href="~/Scripts/radar/main.css" rel="stylesheet" />
+<script src="~/Scripts/radar/d3.min.js"></script>
+<script src="~/Scripts/radar/radar.js"></script>
+@*@Scripts.Render("~/bundles/radar")    
+@Styles.Render("~/Content/radar")*@
 
-@Scripts.Render("~/bundles/radar")    
-@Styles.Render("~/Content/radar")
-
-@*<script src="/Scripts/app/common.js"></script>
+<script src="/Scripts/app/common.js"></script>
 <script src="/Scripts/app/Module.js"></script>
 <script src="/Scripts/app/RiderController.js"></script>
 <script src="/Scripts/app/ActivityController.js"></script>
 <script src="/Scripts/app/ActivityDetailController.js"></script>
-<script src="~/Scripts/app/EarnDateController.js"></script>
-<script src="~/Scripts/app/ChartController.js"></script>
 <script src="~/Scripts/app/SkillController.js"></script>
-<script src="/Scripts/app/Service.js"></script>*@
-@Scripts.Render("~/bundles/app")    
+<script src="/Scripts/app/Service.js"></script>
+@*@Scripts.Render("~/bundles/app")*@    
 }
