--- a/Template/index.html
+++ b/Template/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>app</title>
-    <!--<link rel="stylesheet" type="text/css" href="node_modules/bootstrap/dist/css/bootstrap.min.css">    -->
+    <link rel="stylesheet" type="text/css" href="node_modules/bootstrap/dist/css/bootstrap.min.css">    
   </head>
   <body>
     <div id="app">
