update css file

--- a/Template/src/assets/css/default.css
+++ b/Template/src/assets/css/default.css
@@ -45,223 +45,6 @@ audio:not([controls]) {
 }
 
 
-
-.detail-box .image {
-  position: relative;
-  min-height: 1px;
-  padding-left: 0;
-  padding-right: 0;
-}
-
-@media (min-width: 768px) {
-  .detail-box .image {
-    float: left;
-    width: 50%;
-  }
-}
-
-@media (min-width: 768px) {
-  .detail-box .image {
-    left: 50%;
-  }
-}
-
-.comments-box {
-  margin-top: 40px;
-  padding-bottom: 20px;
-  margin-left: 0;
-  margin-right: 0;
-  position: relative;
-  z-index: 1;
-  background: #3E515A;
-  color: white;
-}
-
-.comments-box:before, .comments-box:after {
-  content: " ";
-  display: table;
-}
-
-.comments-box:after {
-  clear: both;
-}
-
-.comments-box:before {
-  background: inherit;
-  content: '';
-  display: block;
-  height: 50%;
-  left: 0;
-  position: absolute;
-  right: 0;
-  z-index: -1;
-  -webkit-backface-visibility: hidden;
-}
-
-.comments-box:before {
-  top: 0;
-  transform: skewY(1.5deg);
-  transform-origin: 100% 0;
-}
-
-.comments-box h3 {
-  font-family: "Roboto", Helvetica, Arial, sans-serif;
-  font-size: 20px;
-}
-
-.comments-box .comments {
-  position: relative;
-  min-height: 1px;
-  padding-left: 0;
-  padding-right: 0;
-  padding: 0 30px 9px;
-}
-
-@media (min-width: 768px) {
-  .comments-box .comments {
-    float: left;
-    width: 50%;
-  }
-}
-
-.comments-box .comments textarea {
-  border: none;
-  max-width: 100%;
-  background: #263238;
-  margin-bottom: 15px;
-}
-
-.filters {
-  z-index: 10000;
-}
-
-.filters.affix {
-  position: fixed;
-  top: 100px;
-  width: 100%;
-}
-
-.filters.affix ul.filters-bar {
-  -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.35);
-  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.35);
-}
-
-.filters ul.filters-bar {
-  padding: 0;
-  font-family: "Roboto Slab", Georgia, Times, serif;
-  font-weight: 700;
-  background: #3E515A;
-  color: #A0B1BA;
-}
-
-.filters ul.filters-bar li {
-  display: inline-block;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  margin-right: -16px;
-}
-
-.filters ul.filters-bar li span {
-  font-weight: 400;
-  padding: 10px;
-}
-
-.filters ul.filters-bar li label {
-  cursor: pointer;
-  margin-bottom: 0;
-  position: relative;
-  padding: 10px 8px;
-}
-
-@media (min-width: 992px) {
-  .filters ul.filters-bar li label {
-    padding: 10px 10px 10px 30px;
-  }
-  .filters ul.filters-bar li label::before {
-    content: "";
-    position: absolute;
-    width: 16px;
-    height: 16px;
-    left: 0;
-    margin-top: 2px;
-    margin-left: 10px;
-    border: 2px solid #607D8B;
-    border-radius: 50%;
-    background-color: transparent;
-    -webkit-transition: border 0.15s ease-in-out, color 0.15s ease-in-out, background 0.15s ease-in-out;
-    -o-transition: border 0.15s ease-in-out, color 0.15s ease-in-out, background 0.15s ease-in-out;
-    transition: border 0.15s ease-in-out, color 0.15s ease-in-out, background 0.15s ease-in-out;
-  }
-  .filters ul.filters-bar li label::after {
-    position: absolute;
-    width: 16px;
-    height: 16px;
-    left: 0;
-    top: 0;
-    padding-left: 11px;
-    padding-top: 10px;
-  }
-}
-
-.filters ul.filters-bar li input[type="checkbox"] {
-  float: left;
-  visibility: hidden;
-}
-
-.filters ul.filters-bar li input[type="checkbox"]:focus + label::before {
-  outline: thin dotted;
-  outline: 5px auto -webkit-focus-ring-color;
-  outline-offset: -2px;
-  outline: none;
-}
-
-.filters ul.filters-bar li input[type="checkbox"]:checked + label {
-  background: #263238;
-  color: white;
-}
-
-@media (min-width: 992px) {
-  .filters ul.filters-bar li input[type="checkbox"]:checked + label::after {
-    font-family: 'FontAwesome';
-    content: "\f00c";
-    color: #263238;
-  }
-  .filters ul.filters-bar li input[type="checkbox"]:checked + label::before {
-    background-color: white;
-    border-color: white;
-  }
-}
-
-.filters ul.filters-bar li input[type="checkbox"]:disabled + label {
-  opacity: 0.65;
-}
-
-.filters ul.filters-bar li input[type="checkbox"]:disabled + label::before {
-  background-color: #607D8B;
-  cursor: not-allowed;
-}
-
-*, *:before, *:after {
-  box-sizing: border-box !important;
-}
-
-.masonry {
-  -moz-column-width: 15em;
-  -webkit-column-width: 15em;
-  column-width: 15em;
-  -moz-column-gap: 5px;
-  -webkit-column-gap: 5px;
-  column-gap: 5px;
-}
-
-.tile {
-  display: inline-block;
-  width: 100%;
-}
-
-img {
-  position: relative;
-  display: block;
-  width: 100%;
+.router-link-active{
+  color : indianred;
 }
